<resources>
    <string name="app_name">GH16-Pikhmanets-ListStudents</string>
    <string name="app_nameRV">ListStudents(RecyclerView)</string>
    <string name="app_nameLV">ListStudents(ListView)</string>

    <string name="git_button">GIT</string>
    <string name="nameStudents">nameStudents</string>

    <string name="bo4karova.jpg">bo4karova</string>
    <string name="gubskyi.jpg">gubskyi</string>
    <string name="khimich.jpg">khimich</string>
    <string name="kirichenko.jpg">kirichenko</string>
    <string name="leshenko.jpg">leshenko</string>
    <string name="limar.jpg">limar</string>
    <string name="lis.jpg">lis</string>
    <string name="migal.jpg">migal</string>
    <string name="pakharenko.jpg">pakharenko</string>
    <string name="pikhmanets.jpg">pikhmanets</string>
    <string name="ryabko.jpg">ryabko</string>
    <string name="rybak.jpg">rybak</string>
    <string name="sakurov.jpg">sakurov</string>
    <string name="segreenko.jpg">segreenko</string>
    <string name="smalko.jpg">smalko</string>
    <string name="storchak.jpg">storchak</string>
    <string name="sytnyk.jpg">sytnyk</string>
    <string name="tyoply.jpg">tyoply</string>
    <string name="vinik.jpg">vinik</string>
    <string name="zdanov.jpg">zdanov</string>

    <string name="menu_RV">Show RecyclerView</string>
    <string name="menu_LV">Show LisrView</string>
    <string name="menu_refresh">Refresh List</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_start_rv">RecyclerView</string>
    <string name="btn_start_lv">ListView</string>
    <string name="first_task">First hometask</string>
    <string name="second_task">Second hometask</string>
    <string name="third_hometask">Third hometask</string>
    <string name="fourth_hometask">Fourth hometask</string>

    <string name="btn_start_listview_api">ListView</string>
    <string name="btn_start_recyclerview_api">RecyclerView</string>
    <string name="username">UserName</string>

    <string name="image_from_gallery_camera">Image from Gallery/Camera</string>
    <string name="help">Чтобы добавить изображение нажмите кнопку снизу!</string>
    <string name="make_photo_camera">Сделать снимок камерой</string>
    <string name="load_from_gallery">Загрузить из галереи</string>
    <string name="phone_book">PhoneBook</string>

    <string name="list_contacts">Список контактов</string>
    <string name="title_activity_phone_book2">PhoneBookActivity2</string>
    <string name="name">Имя</string>
    <string name="number">Номер</string>
    <string name="image">Image</string>
    <string name="delete_contact">Удалить контакт</string>
    <string name="ivanov_ivan">Ivanov Ivan</string>
    <string name="exam_number">+38000000000</string>
    <string name="avatar">avatar</string>
    <string name="five_hometask">Five hometask</string>
    <string name="realm_list_students">Realm List Students</string>
    <string name="search_hint">поиск</string>
</resources>
