<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.studentslist.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_task" />

        <Button
            android:id="@+id/start_lv_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_lv"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/start_rv_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/btn_start_rv"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_task" />

        <Button
            android:id="@+id/start_lv_activity_api"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_listview_api"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/start_rv_activity_api"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/btn_start_recyclerview_api"
            android:textAllCaps="false" />

    </LinearLayout>


</LinearLayout>
